Rifinita sezione i più letti

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     di Lorem Ipsum, Dolor Sit, Amet Consectetur
                   </p>
                 </div>
-                <p class="paragraph-after-attribution">
+                <p class="paragraph-after-attribution-colour">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                 </p>
                 <nav>
@@ -294,7 +294,7 @@
                   <p class="attribution-colour-and-font-style" id="secondary-article-attribution">
                     di Lorem Ipsum, Dolor Sit, Amet Consectetur
                   </p>
-                  <p class="paragraph-after-attribution">
+                  <p class="paragraph-after-attribution-colour">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   </p>
                   <nav>
@@ -585,7 +585,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                   </h2>
                 </article>
-                <p class="paragraph-after-attribution paragraph-after-attribution-font-size"
+                <p class="paragraph-after-attribution-colour paragraph-after-attribution-font-size"
                 id="corriere-tv-right-first-article-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </p>
@@ -605,7 +605,7 @@
                     <h2 id="corriere-tv-right-second-article-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue sit amet erat a tempus.
                     </h2>
-                    <p class="paragraph-after-attribution paragraph-after-attribution-font-size"
+                    <p class="paragraph-after-attribution-colour paragraph-after-attribution-font-size"
                     id="corriere-tv-right-second-article-paragraph">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
@@ -1182,21 +1182,21 @@
 
             <div class="flex-row-container">
               <div class="i-più-list-column">
-                <ul class="paragraph-after-attribution">
-                  <li class="i-più-visti-list-item-padding-bottom">
+                <ul class="paragraph-after-attribution-colour">
+                  <li class="i-più-list-item-padding-bottom">
                     <figure class="bottom-border">
                       <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
                       <figcaption class="attribution-font-size video-dalla-rete-font-colour
-                      i-più-visti-list-item-padding-bottom">
+                      i-più-list-item-padding-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
-                  <li class="i-più-visti-list-item-padding-bottom">
+                  <li class="i-più-list-item-padding-bottom">
                     <figure class="bottom-border">
                       <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
                       <figcaption class="attribution-font-size video-dalla-rete-font-colour
-                      i-più-visti-list-item-padding-bottom">
+                      i-più-list-item-padding-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
@@ -1205,21 +1205,21 @@
               </div>
 
               <div class="i-più-list-column">
-                <ul class="paragraph-after-attribution">
-                  <li class="i-più-visti-list-item-padding-bottom">
+                <ul class="paragraph-after-attribution-colour">
+                  <li class="i-più-list-item-padding-bottom">
                     <figure class="bottom-border">
                       <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
                       <figcaption class="attribution-font-size video-dalla-rete-font-colour
-                      i-più-visti-list-item-padding-bottom">
+                      i-più-list-item-padding-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
                   </li>
-                  <li class="i-più-visti-list-item-padding-bottom">
+                  <li class="i-più-list-item-padding-bottom">
                     <figure class="bottom-border">
                       <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="video-dalla-rete-img">
                       <figcaption class="attribution-font-size video-dalla-rete-font-colour
-                      i-più-visti-list-item-padding-bottom">
+                      i-più-list-item-padding-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </figcaption>
                     </figure>
@@ -1230,85 +1230,85 @@
           </section>
 
           <section id="i-più-letti" class="half-container flex-column-container">
-            <p class="i-più-top-writing">
+            <p class="i-più-top-writing i-più-margin-before-list">
               I PIÙ LETTI
             </p>
 
-            <div class="flex-row-container">
-              <div>
+            <div class="flex-row-container attribution-font-size">
+              <div class="i-più-list-column">
                 <ul>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
                 </ul>
               </div>
 
-              <div>
+              <div class="i-più-list-column">
                 <ul>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
-                  <li>
-                    <p>
+                  <li class="i-più-letti-list-item-padding-bottom paragraph-after-attribution-colour">
+                    <p class="bottom-border i-più-letti-list-item-padding-bottom">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
                   </li>
