Rifinita sezione i blog del corriere

--- a/index.html
+++ b/index.html
@@ -1319,131 +1319,107 @@
         </div>
 
         <section id="i-blog-del-corriere">
-          <h4 id="i-blog-del-corriere-title">
+          <p class="paragraph-after-attribution-colour" id="i-blog-del-corriere-title">
             I BLOG DEL CORRIERE
-          </h4>
+          </p>
 
-          <div id="i-blog-del-corriere-first-row" class="flex-row-container">
-            <div class="flex-row-container">
+          <div id="i-blog-del-corriere-first-row" class="flex-row-container space-between">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
-            </div>
-
-            <div class="flex-row-container">
-              <div>
-                <h3>
-                  LOREM IPSUM
-                </h3>
-                <p>
-                  di Lorem Ipsum
-                </p>
-              </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
           </div>
 
-          <div id="i-blog-del-corriere-second-row" class="flex-row-container">
-            <div class="flex-row-container">
+          <div id="i-blog-del-corriere-second-row" class="flex-row-container space-between">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex-row-container">
+            <div class="flex-row-container space-between align-items-center i-blog-del-corriere-blog">
               <div>
-                <h3>
+                <h3 class="blog-title">
                   LOREM IPSUM
                 </h3>
-                <p>
+                <p class="attribution-font-size attribution-colour-and-font-style">
                   di Lorem Ipsum
                 </p>
               </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
-            </div>
-
-            <div class="flex-row-container">
-              <div>
-                <h3>
-                  LOREM IPSUM
-                </h3>
-                <p>
-                  di Lorem Ipsum
-                </p>
-              </div>
-              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra">
+              <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
           </div>
         </section>
