--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
               CORRIERE DELLA SERA
             </h4>
 
-            <div>
+            <div class="footer-font-size">
               <span>
                 Lorem Ipsum |
               </span>
@@ -1461,13 +1461,13 @@
               </span>
             </div>
 
-            <div>
+            <div class="footer-font-size">
               Copyright 2025 &copy; Lorem Ipsum S.p.a.
             </div>
           </div>
 
           <div class="right-container">
-            <div>
+            <div class="footer-font-size">
               <span>
                 Lorem Ipsum |
               </span>
@@ -1479,7 +1479,7 @@
               </span>
             </div>
 
-            <div>
+            <div class="footer-font-size">
               <span>
                 Lorem Ipsum |
               </span>
