Effettuato refactoring per i bordi

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="flex flex-column" id="page-container">
     <main class="flex">
       <div class="flex" id="main-container">
-        <section class="flex" id="temi-caldi">
+        <section class="flex top-border" id="temi-caldi">
           <span class="flex" id="temi-caldi-caption">Temi caldi di oggi: </span>
           <nav class="flex" id="temi-caldi-list-container">
             <ul class="flex flex-row" id="temi-caldi-list">
@@ -106,7 +106,7 @@
           </nav>
         </section>
 
-        <section class="flex flex-column" id="corriere-tv-boxes">
+        <section class="flex flex-column top-border" id="corriere-tv-boxes">
           <span id="corriere-tv-writing">
             CORRIERE<span class="tv-boxes-tv-writing-styling">TV</span>
           </span>
@@ -226,8 +226,8 @@
 
           <div class="flex flex-row">
             <div class="flex flex-column left-container right-border">
-              <div class="flex flex-row coupled-articles-container">
-                <div class="flex flex-column coupled-articles-left-article-container
+              <div class="flex flex-row top-border coupled-articles-container">
+                <div class="flex flex-column right-border coupled-articles-left-article-container
                 coupled-articles-article-container">
                 <span class="top-writing-styling">
                   LOREM IPSUM
@@ -276,7 +276,7 @@
                 </div>
               </div>
 
-              <div id="secondary-article-container">
+              <div class="top-border" id="secondary-article-container">
                 <p class="top-writing-styling">
                   LOREM IPSUM
                 </p>
@@ -400,7 +400,7 @@
                 </figure>
               </div>
 
-              <div id="three-articles-top-top-writing-bar-container" class="flex flex-column">
+              <div class="flex flex-column top-border" id="three-articles-top-top-writing-bar-container">
                 <p id="three-articles-top-top-writing">
                   LOREM IPSUM
                 </p>
@@ -465,8 +465,8 @@
 
               <div class="flex flex-column" id="four-articles-in-a-square">
                 <div class="flex flex-row" id="four-articles-in-a-square-upper-articles">
-                  <div class="flex flex-column coupled-articles-article-container four-articles-left-article-container
-                  four-articles-article-container"
+                  <div class="flex flex-column right-border coupled-articles-article-container
+                  four-articles-left-article-container four-articles-article-container"
                   id="four-articles-in-a-square-upper-articles-left-article-container">
                     <p class="top-writing-styling">
                       LOREM IPSUM
@@ -513,9 +513,10 @@
                   </div>
                 </div>
 
-                <div class="flex flex-row" id="four-articles-in-a-square-lower-articles">
+                <div class="flex flex-row top-border" id="four-articles-in-a-square-lower-articles">
                   <div id="four-articles-in-a-square-lower-articles-left-article-container"
-                  class="flex flex-column coupled-articles-article-container four-articles-left-article-container">
+                  class="flex flex-column right-border coupled-articles-article-container
+                  four-articles-left-article-container">
                     <p class="top-writing-styling">
                       LOREM IPSUM
                     </p>
@@ -563,7 +564,7 @@
               </div>
             </div>
 
-            <div class="flex flex-column right-container" id="main-articles-right-container">
+            <div class="flex flex-column right-container right-border left-border" id="main-articles-right-container">
               <div class="flex flex-column" id="three-lines-corriere-tv-top-bar-two-dots-container">
                 <img src="img/Three_Horizontal_Lines.png" alt="tre linee orizzontali" class="three-horizontal-lines">
                 <div class="flex" id="corriere-tv-right-first-top-bar">
@@ -590,7 +591,7 @@
                 </p>
               </div>
 
-              <div id="corriere-tv-right-second-article">
+              <div class="bottom-border" id="corriere-tv-right-second-article">
                 <div class="flex" id="corriere-tv-right-second-article-top-bar">
                   <p class="corriere-tv-blue-box-writing">
                     CORRIERE<span class="tv-styling-right">TV</span>
@@ -622,7 +623,7 @@
                 <div class="flex flex-row editoriali-commenti-comment">
                   <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                   class="pfp-border-radius editoriali-commenti-pfp">
-                  <div class="editoriali-commenti-comment-title-and-author">
+                  <div class="bottom-border editoriali-commenti-comment-title-and-author">
                     <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
@@ -635,7 +636,7 @@
                 <div class="flex flex-row editoriali-commenti-comment">
                   <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                   class="pfp-border-radius editoriali-commenti-pfp">
-                  <div class="editoriali-commenti-comment-title-and-author">
+                  <div class="bottom-border editoriali-commenti-comment-title-and-author">
                     <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
@@ -648,7 +649,7 @@
                 <div class="flex flex-row editoriali-commenti-comment">
                   <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                   class="pfp-border-radius editoriali-commenti-pfp">
-                  <div class="editoriali-commenti-comment-title-and-author">
+                  <div class="bottom-border editoriali-commenti-comment-title-and-author">
                     <h4 class="editoriali-commenti-title">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </h4>
@@ -672,7 +673,7 @@
                 </div>
               </div>
 
-              <div class="right-generic-article-container">
+              <div class="right-generic-article-container top-border">
                 <p class="top-writing-styling generic-right-article-top-writing">
                   LOREM IPSUM
                 </p>
@@ -729,8 +730,8 @@
                 </div>
               </div>
 
-              <div class="flex flex-row coupled-articles-container extra-news-coupled-articles-container">
-                <div class="flex flex-column coupled-articles-left-article-container
+              <div class="flex flex-row top-border coupled-articles-container extra-news-coupled-articles-container">
+                <div class="flex flex-column right-border coupled-articles-left-article-container
                 coupled-articles-article-container">
                 <span class="top-writing-styling">
                   LOREM IPSUM
@@ -838,8 +839,8 @@
                 </div>
               </div>
 
-              <div class="flex flex-row coupled-articles-container extra-news-coupled-articles-container">
-                <div class="flex flex-column coupled-articles-left-article-container
+              <div class="flex flex-row top-border coupled-articles-container extra-news-coupled-articles-container">
+                <div class="flex flex-column right-border coupled-articles-left-article-container
                 coupled-articles-article-container">
                 <span class="top-writing-styling">
                   LOREM IPSUM
@@ -912,13 +913,13 @@
           <img src="img/Four_Horizontal_Lines.png" alt="quattro linee orizzontali"
           class="blog-rubriche-four-horizontal-lines">
 
-          <span class="flex flex-row blog-rubriche-writing">
+          <span class="flex flex-row bottom-border blog-rubriche-writing">
             BLOG <img src="img/And_Symbol.png" alt="placeholder"> RUBRICHE
           </span>
 
           <div class="flex flex-row">
             <div class="flex flex-column three-columns-column three-columns-left-column">
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                 class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -934,7 +935,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -950,7 +951,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -975,7 +976,7 @@
                 <img src="img/Cicero_Placeholder_Tv_Boxes.png" alt="placeholder" class="blog-rubriche-cartoon-img">
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -991,7 +992,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -1009,7 +1010,7 @@
             </div>
 
             <div class="flex flex-column three-columns-column three-columns-right-column">
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -1025,7 +1026,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -1041,7 +1042,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row blog-rubriche-container">
+              <div class="flex flex-row top-border blog-rubriche-container">
                 <img src="img/Cicero_Placeholder_Square.png" alt="placeholder"
                      class="pfp-border-radius blog-rubriche-pfp">
                 <div class="blog-rubriche-text-container">
@@ -1061,7 +1062,7 @@
         </section>
 
         <section id="video-dalla-rete">
-          <p class="attribution-font-size video-dalla-rete-top-writing">
+          <p class="attribution-font-size bottom-border video-dalla-rete-top-writing">
             I VIDEO DALLA RETE
           </p>
 
@@ -1112,7 +1113,7 @@
 
         <section id="garbage-section" class="flex flex-row">
           <div class="garbage-element video-dalla-rete-figure">
-            <p class="garbage-element-top-writing">
+            <p class="bottom-border garbage-element-top-writing">
               LOREM IPSUM 1
             </p>
 
@@ -1125,7 +1126,7 @@
           </div>
 
           <div class="garbage-element video-dalla-rete-figure">
-            <p class="garbage-element-top-writing">
+            <p class="bottom-border garbage-element-top-writing">
               LOREM IPSUM 2
             </p>
 
@@ -1138,7 +1139,7 @@
           </div>
 
           <div class="garbage-element video-dalla-rete-figure">
-            <p class="garbage-element-top-writing">
+            <p class="bottom-border garbage-element-top-writing">
               LOREM IPSUM 3
             </p>
 
@@ -1151,7 +1152,7 @@
           </div>
 
           <div class="garbage-element video-dalla-rete-figure">
-            <p class="garbage-element-top-writing">
+            <p class="bottom-border garbage-element-top-writing">
               LOREM IPSUM 4
             </p>
 
@@ -1164,7 +1165,7 @@
           </div>
 
           <div class="garbage-element video-dalla-rete-figure">
-            <p class="garbage-element-top-writing">
+            <p class="bottom-border garbage-element-top-writing">
               LOREM IPSUM 5
             </p>
 
@@ -1321,7 +1322,7 @@
           </section>
         </div>
 
-        <section class="flex flex-column" id="i-blog-del-corriere">
+        <section class="flex flex-column top-border" id="i-blog-del-corriere">
           <p class="paragraph-after-attribution-colour" id="i-blog-del-corriere-title">
             I BLOG DEL CORRIERE
           </p>
