Effettuato refactoring per le ombre

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-row" id="frammenti-container">
+              <div class="flex flex-row box-shadow" id="frammenti-container">
                 <div class="flex flex-row" id="frammenti-logo-pfp-and-article-container">
                   <div class="flex flex-column" id="frammenti-logo-container">
                     <p id="frammenti-writing">
@@ -463,7 +463,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-column" id="four-articles-in-a-square">
+              <div class="flex flex-column box-shadow" id="four-articles-in-a-square">
                 <div class="flex flex-row" id="four-articles-in-a-square-upper-articles">
                   <div class="flex flex-column right-border coupled-articles-article-container
                   four-articles-left-article-container four-articles-article-container"
@@ -613,7 +613,7 @@
                 </article>
               </div>
 
-              <div id="editoriali-commenti">
+              <div class="box-shadow" id="editoriali-commenti">
                 <span class="flex flex-row" id="editoriali-commenti-writing">
                   EDITORIALI <img src="img/And_Symbol.png" alt="placeholder" class="pfp-border-radius"> COMMENTI
                 </span>
@@ -1180,7 +1180,7 @@
 
         <div id="i-più-container" class="flex flex-row">
           <section id="i-più-visti" class="half-container flex flex-column">
-            <p class="i-più-top-writing i-più-margin-before-list">
+            <p class="box-shadow i-più-top-writing i-più-margin-before-list">
               I PIÙ VISTI
             </p>
 
@@ -1328,7 +1328,7 @@
           </p>
 
           <div id="i-blog-del-corriere-first-row" class="flex flex-row space-between">
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1340,7 +1340,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1352,7 +1352,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1364,7 +1364,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1378,7 +1378,7 @@
           </div>
 
           <div id="i-blog-del-corriere-second-row" class="flex flex-row space-between">
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1390,7 +1390,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1402,7 +1402,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
@@ -1414,7 +1414,7 @@
               <img src="img/Right_Arrow_Generic.png" alt="freccia a destra" class="blog-right-arrow">
             </div>
 
-            <div class="flex flex-row space-between align-items-center i-blog-del-corriere-blog">
+            <div class="flex flex-row space-between align-items-center box-shadow i-blog-del-corriere-blog">
               <div>
                 <h3 class="blog-title">
                   LOREM IPSUM
